alinmapay/openshift/ms-cards/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cards
spec:
  host: api2.alinmapay.com.sa
  path: /v2/alinmapay/cards-management
  to:
    kind: Service
    name: cards
    weight: 100
  port:
    targetPort: 8982
  tls:
    termination: edge
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEyDCCA7CgAwIBAgIQDPW9BitWAvR6uFAsI8zwZjANBgkqhkiG9w0BAQsFADBh
[...]
      JCqVJUzKoZHm1Lesh3Sz8W2jmdv51b2EQJ8HmA==
      -----END CERTIFICATE-----
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIGyzCCBbOgAwIBAgIQBMaxOA70iHl6bTQdPU+m2DANBgkqhkiG9w0BAQsFADBZ
[...]
      5Jsft0611HeSCMEIv3FZ
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQCXOhhxvCHPU5NF
[...]
      oSZcErwaZiNsY9K30vmS5cg=
      -----END PRIVATE KEY-----
